--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a {
     position: fixed;
     width: 100%;
     text-align: center;
+    /*height: 70px;*/
 }
 
 .main-content {
@@ -41,13 +42,20 @@ a {
     text-align: center;
 }
 
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 #home {
     font-size: 20px;
     position: relative;
-    top: 4px;
     font-weight: bold;
-    margin-right: 150px;
+    /*margin-right: 150px;*/
     display: inline-block;
+    float: left;
+    line-height: 70px;
 }
 
 #home > a {
@@ -65,7 +73,8 @@ a {
     display: inline-block;
     font-size: 14px;
     color: transparent;
-    padding: 20px 0px;
+    float: right;
+    line-height: 70px;
 }
 
 #top-menu > .nav > a {
@@ -90,6 +99,7 @@ a {
 
 #main-img > img {
     width: 100%;
+    min-width: 960px;
 }
 
 h3 {
@@ -206,6 +216,10 @@ h4 {
 }
 
 #testimonial-section > div > div > div {
+
+}
+
+.TESTIMONIALS > div {
     margin-top: 25px;
     color: #888888;
     font-size: 20px;
@@ -213,22 +227,19 @@ h4 {
     display: inline-block;
 }
 
-#ben-graham {
+.ben-graham {
     margin-top: 50px;
 
 }
 
-#ben-graham > div {
+.ben-graham > div {
     color: #888888 !important;
     font-size: 15px !important;
     display: block !important;
+    margin-top: 25px;
 }
 
-#circles {
-
-}
-
-#circles {
+/*#circles {
     margin-top: 25px;
 }
 
@@ -245,7 +256,7 @@ h4 {
 
 .circles-active {
     background: #949494 !important;
-}
+}*/
 
 #pre-footer {
     background-color: #151A1E;
