--- a/second/css/main.css
+++ b/second/css/main.css
@@ -1,3 +1,27 @@
+/****************************** <Fonts> ******************************/
+@font-face {
+    font-family: Raleway-SemiBold;
+    src: url(../fonts/Raleway-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: Raleway-ExtraBold;
+    src: url(../fonts/Raleway-ExtraBold.ttf);
+}
+
+@font-face {
+    font-family: Raleway-Light;
+    src: url(../fonts/Raleway-Light.ttf);
+}
+
+@font-face {
+    font-family: Raleway-Regular;
+    src: url(../fonts/Raleway-Regular.ttf);
+}
+
+/****************************** </Fonts> ******************************/
+
+/****************************** <Global> ******************************/
 * {
     margin: 0px;
     padding: 0px;
@@ -9,6 +33,8 @@ html {
 body {
 }
 
+/****************************** </Global> ******************************/
+
 /****************************** <Header> ******************************/
 .header {
     background-color: #5bbc2e;
@@ -17,10 +43,10 @@ body {
     text-align: center;
     height: 71px;
     display: table;
+    top: 0px;
 }
 
-.header__logo {
-    border: 1px solid blue;
+.header_wraper {
     display: table-cell;
     vertical-align: middle;
 }
@@ -28,8 +54,8 @@ body {
 .header__logo__wraper {
     display: inline-block;
     width: 135px;
-    border: 1px solid pink;
     vertical-align: middle;
+    text-align: left;
 }
 
 .header__logo__wraper__img {
@@ -37,53 +63,60 @@ body {
     height: 48px;
     display: inline-block;
     float: left;
-    border: 1px solid green;
 }
 
 .header__logo__wraper__Joby {
     font-size: 25px;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
+    font-family: 'Raleway-ExtraBold', sans-serif;
+    color: #ffffff;
     text-transform: uppercase;
     display: inline-block;
-    border: 1px solid aqua;
 }
 
 .header__logo__wraper__Job-Finder {
     font-size: 14px;
-    color: rgb(255, 255, 255);
+    font-family: 'Raleway-Light', sans-serif;
+    color: #ffffff;
     text-transform: uppercase;
     display: inline-block;
-    border: 1px solid chocolate;
+    position: relative;
+    top: -3px;
 }
 
-.header__nav {
-    display: table-cell;
-    vertical-align: middle;
-    border: 1px solid red;
-}
-
-.header__nav__ul {
-    /*display: inline-block;*/
+.header__nav-ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    float: right;
 }
 
-.header__nav__ul__li {
+.header__nav-ul__li {
+    margin: 0;
+    padding: 0;
     display: inline-block;
+    padding-right: 44px;
 }
 
-.header__nav__ul__li__a {
+.header__nav-ul__li__a {
+    margin: 0;
+    padding: 0;
     font-size: 13px;
-    /*font-family: "Raleway";*/
+    font-family: 'Raleway-SemiBold', sans-serif;
     color: #ffffff;
-    font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
 }
 
-.header__nav__ul__li__a--active {
+.header__wraper__Become-btn {
+    font-size: 13px;
+    font-family: 'Raleway-SemiBold', sans-serif;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-decoration: none;
+    background-color: #409d16;
+    padding: 10px;
+    margin: 0px;
+    float: left;
 }
 
 /****************************** </Header> ******************************/
@@ -92,18 +125,58 @@ body {
 }
 
 .section__parallax {
+    background-image: url("../img/bg_parallax.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-color: #edecf2;
+    height: 758px;
+    text-align: center;
 }
 
 .section__parallax__title {
+    font-size: 60px;
+    font-family: 'Raleway-ExtraBold', sans-serif;
+    color: #000000;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding-top: 318px;
 }
 
 .section__parallax__title--green-color {
+    color: #5bbc2e;
 }
 
-.section__parallax__under-title {
+.section__parallax__under {
+    text-align: center;
+}
+
+.section__parallax__under__line {
+    width: 844px;
+    display: inline-block;
+    border-top: 1px solid #b2b2b2;
+}
+
+.section__parallax__under__title {
+    font-size: 18px;
+    font-family: 'Raleway-Regular', sans-serif;
+    color: #b2b2b2;
+    text-decoration: none;
+    text-align: center;
+    margin-top: 25px;
 }
 
 .section__parallax__get-sarted {
+    border-radius: 2px;
+    background-color: #5bbc2e;
+    font-size: 18px;
+    font-family: 'Raleway-ExtraBold', sans-serif;
+    color: #ffffff;
+    padding: 18px 160px;
+    display: inline-block;
+    text-shadow: 0px 1px 0px rgba(0, 1, 1, 0.15);
+    text-align: center;
+    text-decoration: none;
+    margin-top: 50px;
 }
 
 .footer {
