Changed the field type to a numbered spinner for the filter

--- a/shop.loc/pages/home/search-form.css
+++ b/shop.loc/pages/home/search-form.css
@@ -89,3 +89,11 @@
 .search-form-close-hiden {
     display: none;
 }
+
+.search-form-price {
+    width: 85px;
+}
+
+input[name='Brand'] {
+    margin-top: 10px;
+}
